--- a/index.html
+++ b/index.html
@@ -823,8 +823,8 @@
               </thead>
               <tbody>
                 <tr data-codigo="ANF231">
-                  <td class="text-center">ESD501</td>
-                  <td>Estadística de Datos</td>
+                  <td class="text-center">AOL501</td>
+                  <td>Administración de Operaciones y Logística</td>
                   <td class="text-center">1</td>
                   <td class="text-center">
                     <a class="btn btn-link btn-sm pt-0" href="https://iiudb.github.io/-admacad.udb.edu.sv-EstudiantesPlus-ADE501/"><strong>
