--- a/index.html
+++ b/index.html
@@ -860,7 +860,7 @@
                   <td>Macroeconoía</td>
                   <td class="text-center">1</td>
                   <td class="text-center">
-                    <a class="btn btn-link btn-sm pt-0" href="https://iiudb.github.io/-admacad.udb.edu.sv-EstudiantesPlus-LEE303-/"><strong>
+                    <a class="btn btn-link btn-sm pt-0" href="https://iiudb.github.io/-EstudiantesPlus-ADE501/"><strong>
                         8.7
                         </strong></a>
                         </td>
